Updated spanish labels

--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
@@ -56,7 +56,7 @@ type.PowertoolsSizeVariantProduct.description=
 type.PowertoolsSizeVariantProduct.size.name=Size
 type.PowertoolsSizeVariantProduct.size.description=
 
-businessrule.shippingPointMismatch=The shipping point of this product must be similar to the product(s) in Cart!!!
+businessrule.shippingPointMismatch=The shipping point of this product is not the same as the item(s) already in the cart.
 
 b2bunit.ordervalue.error=The order does not satisfy the Minimum Order value of
 uom.business.rule.productnotfound=Product not found.
@@ -65,11 +65,11 @@ uom.business.rule.uomnotvalid=Unit of measure for this product is not valid.
 uom.business.rule.moqnotvalid=Quantity ordered should be a multiple of 
 basket.page.moq.notexists=MOQ does not exist for this product.
 
-shippingpoint.business.rule.shipfromnotvalid=The shipping point of {0} product must be similar to the product(s) in the Cart.
-shippingpoint.business.rule.shipfromnotfound=The shipping point of {0} product is not found.
+shippingpoint.business.rule.shipfromnotvalid=Shipping point for Material #{0} is not the same as the item(s) already in the cart.
+shippingpoint.business.rule.shipfromnotfound=The shipping point of Material #{0} is not found.
 
 container.business.rule.orderExceeded=Dear Customer, You have exceeded the limit. Please adjust the cart.
-container.business.rule.orderblocked=Dear Customer, You order has been blocked. Please contact Customer Care
+container.business.rule.orderblocked=Your account is blocked and you cannot place an order right now. Please contact customer service.
 
 
 type.EnergizerCMSLinkComponent.name=Energizer CMS Link Component
