--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
@@ -56,18 +56,19 @@ type.PowertoolsSizeVariantProduct.description=
 type.PowertoolsSizeVariantProduct.size.name=Tama\u00C3\u00B1o
 type.PowertoolsSizeVariantProduct.size.description=
 
+businessrule.shippingPointMismatch=El punto de este producto de envío no es lo mismo que el artículo ( s ) ya en el carrito.
 
 b2bunit.ordervalue.error=El pedido no cumple con el valor m\u00EDnimo de pedido de
 uom.business.rule.productnotfound=Producto no encontrado
-product.business.rule.convesrion.notvalid =  Product does not have Conversion for
+product.business.rule.convesrion.notvalid =  Producto no tiene conversión para
 uom.business.rule.uomnotvalid=La unidad de medida de este producto es inv\u00E1lida 
 uom.business.rule.moqnotvalid=Cantidad M\u00EDnima de Pedido debe ser m\u00FAltiplo de
 basket.page.moq.notexists=MOQ no existe para este producto.
 
-shippingpoint.business.rule.shipfromnotvalid=El punto de env\u00EDo del producto (0) debe ser similar al del producto(s) en el carro de compra.
-shippingpoint.business.rule.shipfromnotfound=El punto de env\u00EDo del producto {0} no se encuentra.
+shippingpoint.business.rule.shipfromnotvalid=Puesto de expedición de material # { 0 } no es el mismo que el elemento ( s ) ya en el carrito.
+shippingpoint.business.rule.shipfromnotfound=El punto de los materiales # { 0 } del envío no se encuentra.
 container.business.rule.orderExceeded=Ha excedido el l\u00EDmite del contenedor en volumen / peso. Por favor ajuste su compra.
-container.business.rule.orderblocked=Estimado cliente,usted pide ha sido bloqueado . P\u00F3ngase en contacto con Atenci\u00F3n al Cliente
+container.business.rule.orderblocked=Su cuenta está bloqueada y no se puede hacer un pedido en este momento . Por favor, póngase en contacto con el servicio al cliente.
 
 type.EnergizerB2BUnit.name=Energizer B2B Unit
 type.EnergizerProduct.name=Energizer Product
