--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1503,7 +1503,7 @@ text.account.MOQ = MOQ
 text.account.Customer.Product.Name= Customer Product Name
 text.account.Customer.Specific.Price= Customer Specific Price
 text.account.Shipped.Quantity = Shipped Quantity
-text.order.viewInvoice = view Invoice
+text.order.viewInvoice = View Invoice
 text.account.order.offline=Offline
 text.account.order.portal=Portal
 text.account.orderHistory.sap.orderNumber =Order No
