email template update

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
@@ -5,7 +5,7 @@ emailSubject=Order {0} Approval Rejected
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
-thankYouForOrder=Thank you for your order. Your order number {0} is rejected.
+thankYouForOrder=Thank you for your order. Your order with reference number {0} is rejected.
 quantity=Quantity
 itemPrice=Item Price
 total=Total
@@ -29,10 +29,13 @@ paragraphAccountLocation=If you've registered an account with us, the details of
 paragraphCreateAccount=If you do not have an account, why not create an account today? You will check out faster next time by using saved delivery address and payment details.
 paragraphDeliveryInfo=Please see the {0}Delivery Information{1} for further details about receiving your order.
 paragraphContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {2}.
-complimentaryClosing=Many Thanks
-signature=Customer Services
+complimentaryClosing= Thanks
+signature=Energizer Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
+note=Note:This is an automatically generated email. Please do not reply to this mail.
+termsUrl=http://www.energizer.com/energizer-legal-statement
+faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
