email-orderApprovalRejectionBody.vm Rejection reason populated in email template

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
@@ -12,7 +12,7 @@ total=Total
 free=FREE
 purchaseOrderNumber=Purchase Order Number
 costCenter=Cost Center
-rejectionDetails=Your order is rejected  by {0} due to {1}.
+rejectionDetails=Rejection Reason :  {0}.
 deliveryMethod=Delivery Method
 deliveryAddress=Delivery Address
 freeDelivery=Free Delivery
