spanish label changes and delivery country code added in impex

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -83,10 +83,10 @@ basket.page.itemPrice=Precio del art\u00EDculo
 basket.page.unitPrice=Ordering Unit price
 basket.page.prdCode=ID del Material
 basket.page.cmirId=ID del CMIR
-basket.page.shipFrom=kapal Ti
+basket.page.shipFrom=Enviar desde
 basket.page.uom=Unidad de Ordenaci\u00F3n
 basket.page.baseuom.convertion=No de Cada
-basket.page.moq=M\u00EDnimo de pedido Cantidad
+basket.page.moq=cantidad minima de pedido
 basket.page.customerMaterialId=ID del Material del cliente
 basket.page.customerProductName=Nombre del producto del cliente
 basket.page.MaterialId=ID del Material
@@ -222,6 +222,7 @@ checkout.summary.paymentMethod.securityCode.whatIsThis=(What is this?)
 checkout.summary.paymentMethod.securityCode.whatIsThis.description=The last 3 digits on the signature strip on the back of the card. For American Express,it's the 4 digits just above the hologram on the front of the card.
 checkout.summary.paymentType.header=Select Payment Type
 checkout.summary.placeOrder=Proceder
+simulateCheckout.summary.placeOrder=Proceder
 checkout.summary.placeReplenishmentOrder=Poner pedido de Reposici\u00F3n
 checkout.summary.placeOrder.readTermsAndConditions=He le\u00EDdo y estoy de acuerdo con los <a class=\"termsAndConditionsLink\" href=\"javascript:void(0)\">t\u00E9rminos y condiciones</a>
 checkout.summary.purchaseOrderNumber=O.C. No.
@@ -288,7 +289,7 @@ login.password=Contrase\u00F1a
 login.required=Necesario
 login.required.message=Los campos marcados con * son obligatorios
 login.title=Cliente
-login.username=Nombre de usuario(Email)
+login.username=Nombre de usuario(Correo Electronico)
 myCompany.login.myCompanyHome=Inicia sesi\u00F3n para Mi Empresa
 order.free=GRATIS
 order.itemPrice=Precio del art\u00EDculo
