--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -394,6 +394,12 @@ profile.pwd.invalid=Por favor,ingrese su contrase\u00F1a
 profile.submit=Actualizaci\u00F3n
 profile.title=T\u00EDtulo
 profile.title.invalid=Seleccione un t\u00EDtulo
+########## Begin -Translation for Forgot Password labels ###################
+profile.passwordQuestion.invalid=Please select a Password Question
+profile.passwordQuestion=Password Question
+profile.passwordAnswer=Password Answer
+profile.passwordAnswer.invalid=Please enter Password Answer
+########## End -Translation for Forgot Password labels ###################
 register.checkPwd = Confirmar contrase\u00F1a
 register.checkPwd.invalid = Confirme su contrase\u00F1a
 register.description = Para hacer compras que primero debe crear una cuenta.
