Added for CR - prevPasswords changes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -387,6 +387,7 @@ profile.checkPwd=Confirm Password
 profile.checkPwd.invalid=Please confirm your password
 profile.currentPassword=Current Password
 profile.currentPassword.invalid=Please enter your current password
+profile.newPassword.match=Your New Password must not be of previous 5 passwords!!
 profile.email=Email Address
 profile.email.invalid=Please enter a valid email
 profile.email.unique=The email you entered is not available
