--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -380,6 +380,7 @@ profile.checkPwd=Confirmar Contrase\u00F1a
 profile.checkPwd.invalid=Por favor confirme su contrase\u00F1a
 profile.currentPassword=contrase\u00F1a actual
 profile.currentPassword.invalid=Por favor ingrese su contrase\u00F1a actual
+
 profile.email=Direcci\u00F3n De Correo Electr\u00F3nico
 profile.email.invalid=Por favor,ingrese una direcci\u00F3n de correo electr\u00F3nico v\u00E1lida
 profile.email.unique=La direcci\u00F3n de correo electr\u00F3nico que ha introducido no est\u00E1 disponible
@@ -395,6 +396,7 @@ profile.submit=Actualizaci\u00F3n
 profile.title=T\u00EDtulo
 profile.title.invalid=Seleccione un t\u00EDtulo
 ########## Begin -Translation for Forgot Password labels ###################
+profile.newPassword.match=Your New Password must not be of previous 5 passwords!!
 profile.passwordQuestion.invalid=Please select a Password Question
 profile.passwordQuestion=Password Question
 profile.passwordAnswer=Password Answer
