Added for CR Changes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -380,9 +380,12 @@ profile.checkEmail.invalid=Please confirm your email address
 profile.checkNewPassword=Confirm New Password
 profile.checkNewPassword.invalid=Please confirm your new password
 profile.passwordQuestion.invalid=Please select a Password Question
+profile.passwordQuestion.incorrect=Please select your correct Password Question
 profile.passwordQuestion=Password Question
 profile.passwordAnswer=Password Answer
 profile.passwordAnswer.invalid=Please enter Password Answer
+profile.passwordAnswer.incorrect=Please enter your correct Password Answer
+profile.email.incorrect=Please enter existing Customer's email address
 profile.checkPwd=Confirm Password
 profile.checkPwd.invalid=Please confirm your password
 profile.currentPassword=Current Password
