--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -401,6 +401,9 @@ profile.passwordQuestion.invalid=Please select a Password Question
 profile.passwordQuestion=Password Question
 profile.passwordAnswer=Password Answer
 profile.passwordAnswer.invalid=Please enter Password Answer
+profile.passwordAnswer.incorrect=Please enter your correct Password Answer
+profile.passwordQuestion.incorrect=Please select your correct Password Question
+profile.email.incorrect=Please enter existing Customer's email address
 ########## End -Translation for Forgot Password labels ###################
 register.checkPwd = Confirmar contrase\u00F1a
 register.checkPwd.invalid = Confirme su contrase\u00F1a
