error messages internationalisation

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1513,3 +1513,7 @@ text.account.quickorder.entermoqmultiples=Introduzca m\u00FAltiplos del MOQ (Mí
 text.account.quickorder.inputvalidnumber=Introduzca un n\u00FAmero v\u00E1lido
 profile.contactNumber.format.invalid = Por favor,ingrese el n\u00FAmero de contacto v\u00E1lida
 text.account.quickorder.currentShippingPointInCart=Su carrito tiene actualmente el Punto de env\u00EDo:
+account.password.expiry =Your Password has been Expired. Please Generate New Password.
+account.password.expiry.notification = Your Password expires in {0} days.
+
+account.password.isQuestionAnsSet = Please set Password Question and Answer
