message labels for simultaneous approve.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1494,6 +1494,7 @@ text.account.orderHistory.containerNumber=N\u00FAmero de contenedores
 text.account.orderHistory.carrierName=Nombre del transportador
 text.account.orderHistory.orderPlaced= Pedido realizado el
 text.account.orderHistory.poNumber  =N\u00FAmero de orden de compra
+text.approval.process.already.completed=This order reference is already approved by another approver.
 profile.contactNumber=N\u00FAmero De Contacto
 profile.error.contactNumber=Por favor,ingrese el n\u00FAmero de contacto v\u00E1lida
 text.account.quickorder.enterwholenumber=Introduzca un n\u00FAmero entero
