--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
@@ -5,7 +5,7 @@ emailSubject=Energizer Order Pending Approval {0}
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi
-thankYouForOrder= A new order  {0} is pending for approval. Order details are as below:
+thankYouForOrder= A new order with reference number {0} is pending for approval. Order details are as below:
 quantity=Quantity
 itemPrice=Price(USD)
 total=Total Price(USD)
