--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -162,7 +162,7 @@ checkout.paymentMethod.createSubscription.failed=Failed to create subscription. 
 checkout.paymentMethod.noSecurityCode=Please provide security code.
 checkout.paymentMethod.notSelected=Please provide details of your payment for your order
 checkout.placeOrder.failed=No se pudo realizar el pedido
-checkout.simulateOrder.failed=Error al Simular pedido. Por favor,intentelo m\u00E1s tarde.
+checkout.simulateOrder.failed=No se pudo simular orden. Por favor, inténtelo de nuevo después de 30 minutos.
 checkout.security.code=Security Code
 checkout.summary.costCenter.editCostCenter=Edit Cost Center
 checkout.summary.costCenter.header=Centro de costos \\:
@@ -1494,7 +1494,7 @@ text.account.orderHistory.containerNumber=N\u00FAmero de contenedores
 text.account.orderHistory.carrierName=Nombre del transportador
 text.account.orderHistory.orderPlaced= Pedido realizado el
 text.account.orderHistory.poNumber  =N\u00FAmero de orden de compra
-text.approval.process.already.completed=This order reference is already approved by another approver.
+text.approval.process.already.completed=Esta referencia fin ya está aprobado/rechazado por otra aprobador.
 profile.contactNumber=N\u00FAmero De Contacto
 profile.error.contactNumber=Por favor,ingrese el n\u00FAmero de contacto v\u00E1lida
 text.account.quickorder.enterwholenumber=Introduzca un n\u00FAmero entero
