Changed "Energizer" label to "Edgewell" and also Signature

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
@@ -5,19 +5,19 @@ emailSubject=Customer Registration
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
-thankYouForRegistering=Your Energizer Portal account is activated.
+thankYouForRegistering=Your Edgewell Portal account is activated.
 registeredEmailInfo=Your registered email address is
 instructionsShoppingUrl=To start shopping please click here
 instructionsAccountUrl=To access your account please click here: {0}My Account{1}
 instructionsForgottenPswdUrl=To complete your registration, please click on the following link and generate your password: {0}Update My Password{1}
 instructionsContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
 complimentaryClosing=Thanks
-signature=Energizer Portal Team
+signature=Edgewell Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
-contactUsEmailAddress=customercare@energizer.com
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
 note=Note:This is an automatically generated email. Please do not reply to this mail.
-termsUrl=http://www.energizer.com/energizer-legal-statement
-faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
+termsUrl=http://edgewell.com/legal/
+faqUrl=http://edgewell.com/legal/
