three char in month field for deliverydate issue along with email subject and content changes

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
@@ -1,13 +1,13 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Order {0} Approval Rejected
+emailSubject=Reference Number {0} Approval Rejected
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
-thankYouForOrder=Thank you for your order. Your order with reference number {0} is rejected.
+thankYouForOrder= Your reference number {0} is rejected.
 quantity=Quantity
-itemPrice=Item Price
+itemPrice=Item Price(USD)
 total=Total
 free=FREE
 purchaseOrderNumber=Purchase Order Number
