--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -1,11 +1,11 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Energizer Order {0}  approved
+emailSubject=Energizer Order Number {0}  approved
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi
-thankYouForOrder= Order {0} is approved.Order details are as below:
+thankYouForOrder= Order number {0} is approved.Order details are as below:
 quantity=Quantity
 itemPrice=Price(USD)
 total=Total Price(USD)
