--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
@@ -1,11 +1,11 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Energizer Order Approval Failed for reference no {0}
+emailSubject=Energizer Approval Failed for Reference no {0}
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi
-thankYouForOrder= Approval for Order {0} has Failed.Order details are as below:
+thankYouForOrder= Approval for reference number {0} has failed.Order details are as below:
 quantity=Quantity
 itemPrice= Price(USD)
 total=Total Price(USD)
