--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_en.properties
@@ -1,14 +1,14 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject= Order {0} is IN_PROCESS
+emailSubject= Order Number {0} is IN_PROCESS
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi,
-thankYouForOrder= Your Order with Order Number {0}{1}{2} is IN_PROCESS
+thankYouForOrder= Your Order Number {0}{1}{2} is IN_PROCESS
 shippedItems=The following item(s) from Order {0}{1}{2} is in process:
 quantity=Ordered Quantity
-itemPrice=Ordered Item Price
+itemPrice=Ordered Item Price(USD)
 total=Ordered Total
 free=FREE
 track=You can track your delivery here: {0}
