--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
@@ -1,11 +1,11 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Energizer Order Pending Approval {0}
+emailSubject=Energizer Reference Number Pending Approval {0}
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi
-thankYouForOrder= A new order with reference number {0} is pending for approval. Order details are as below:
+thankYouForOrder= A new reference number  {0} is pending for approval. Order details are as below:
 quantity=Quantity
 itemPrice=Price(USD)
 total=Total Price(USD)
