Changed the footer links Help, Terms and Conditions, Faq. Replaced "Edgewell" for "Energizer"

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
@@ -15,11 +15,11 @@ track=You can track your delivery here: {0}
 paragraphContactUs=If we can help you with any enquiry, please check our {0}FAQ page{1}, use our {2}Contact Us{3} page, or contact our customer services team directly via phone 1800-383-7323 or email {4}.
 paragraphContactUs_electronics=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
 complimentaryClosing= Thanks
-signature=Energizer Portal Team
+signature=Edgewell Portal Team
 help=Help
 contactUs=Contact Us
-contactUsPage=http://www.hybris.com/en/contact
-contactUsEmailAddress=customerservices@energizer.com
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
 PONumber = P.O.Number:
 DeliveryDate = Requested Delivery Date:
@@ -39,5 +39,5 @@ adjustedPrice = Adjusted Price
 adjustedTotalPrice = Adjusted Total Price
 uom=UOM
 note=Note:This is an automatically generated email. Please do not reply to this mail.
-termsUrl=http://www.energizer.com/energizer-legal-statement
-faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
+termsUrl=http://edgewell.com/legal/
+faqUrl=http://edgewell.com/legal/
