--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
@@ -6,17 +6,17 @@ myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
 sentenceAlmostDone=You&rsquo;re almost done.
-sentenceUpdatePswdInstructions=Please click on the link below to reset the password for your Energizer Portal account
+sentenceUpdatePswdInstructions=Please click on the link below to reset the password for your Edgewell Portal account
 paragraphSecurityNote=Please note that link expires within {0} minutes of receipt of this mail. 
 paragraphExpiredLink= {0}Request a password update{1}
 paragraphContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
 complimentaryClosing=Thanks
-signature=Energizer Portal Team
+signature=Edgewell Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
-contactUsEmailAddress=customercare@energizer.com
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
 note=Note:This is an automatically generated email. Please do not reply to this mail.
-termsUrl=http://www.energizer.com/energizer-legal-statement
-faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
+termsUrl=http://edgewell.com/legal/
+faqUrl=http://edgewell.com/legal/
