--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderApprovalRejection_en.properties
@@ -30,12 +30,12 @@ paragraphCreateAccount=If you do not have an account, why not create an account 
 paragraphDeliveryInfo=Please see the {0}Delivery Information{1} for further details about receiving your order.
 paragraphContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {2}.
 complimentaryClosing= Thanks
-signature=Energizer Portal Team
+signature=Edgewell Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
-contactUsEmailAddress=customerservices@hybris.com
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
 note=Note:This is an automatically generated email. Please do not reply to this mail.
-termsUrl=http://www.energizer.com/energizer-legal-statement
-faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
+termsUrl=http://edgewell.com/legal/
+faqUrl=http://edgewell.com/legal/
