--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderCancelled_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderCancelled_en.properties
@@ -15,12 +15,12 @@ track=You can track your delivery here: {0}
 paragraphContactUs=If we can help you with any enquiry, please check our {0}FAQ page{1}, use our {2}Contact Us{3} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {4}.
 paragraphContactUs_electronics=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone +44 (0)20 / 7429 4175 or email {2}.
 complimentaryClosing= Thanks
-signature=Energizer Portal Team
+signature=Edgewell Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
-contactUsEmailAddress=customerservices@hybris.com
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
 note=Note:This is an automatically generated email. Please do not reply to this mail.
-termsUrl=http://www.energizer.com/energizer-legal-statement
-faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
+termsUrl=http://edgewell.com/legal/
+faqUrl=http://edgewell.com/legal/
