--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-quoteOrderRejection_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-quoteOrderRejection_en.properties
@@ -34,5 +34,6 @@ signature=Customer Services
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.hybris.com/en/contact
-contactUsEmailAddress=customerservices@hybris.com
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
+termsUrl=http://edgewell.com/legal/
