--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
@@ -1,7 +1,7 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Energizer Reference Number Pending Approval {0}
+emailSubject=Edgewell Reference Number Pending Approval {0}
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi
@@ -30,15 +30,15 @@ paragraphCreateAccount=If you do not have an account, why not create an account 
 paragraphDeliveryInfo=Please see the {0}Delivery Information{1} for further details about receiving your order.
 paragraphContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
 complimentaryClosing=Thanks
-signature=Energizer Portal Team
+signature=Edgewell Portal Team
 help=Help
 contactUs=Contact Us
 contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
-contactUsEmailAddress=customerservices@hybris.com
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
 UOM =UOM
 customerMaterialId = Customer Material Id
 erpMaterialId = ERP Material Id
 note=Note:This is an automatically generated email. Please do not reply to this mail.
-termsUrl=http://www.energizer.com/energizer-legal-statement
-faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
+termsUrl=http://edgewell.com/legal/
+faqUrl=http://edgewell.com/legal/
