--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-replenishmentOrderPlaced_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-replenishmentOrderPlaced_en.properties
@@ -33,6 +33,7 @@ complimentaryClosing=Many Thanks
 signature=Customer Services
 help=Help
 contactUs=Contact Us
-contactUsPage=http://www.hybris.com/en/contact
-contactUsEmailAddress=customerservices@hybris.com
+contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
+contactUsEmailAddress=EdgewellICS@edgewell.com
 termsAndCondition=Terms &amp; Conditions
+termsUrl=http://edgewell.com/legal/
