Added Password Regex Pattern in Form Java classes and changed previousPasswordCounter to 6

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1424,7 +1424,7 @@ updatePwd.checkPwd=Confirm Password
 updatePwd.checkPwd.invalid=Please confirm your password
 updatePwd.description=Please enter a new password.
 updatePwd.pwd=Password
-updatePwd.pwd.invalid=Please enter a password with minimum 6 characters
+updatePwd.pwd.invalid=Please enter a password with minimum 6 characters and it should contain atleast one letter upper and one letter lower case and one special character(!$#%) and no white spaces
 updatePwd.submit=Update Password
 updatePwd.title=Update Password
 updatePwd.token.invalid=The link used to access the update page was invalid.
