Fixed the cron job email to be sent only once. Changed the messages to be displayed for Password RegEx Pattern

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1424,7 +1424,7 @@ updatePwd.checkPwd=Confirm Password
 updatePwd.checkPwd.invalid=Please confirm your password
 updatePwd.description=Please enter a new password.
 updatePwd.pwd=Password
-updatePwd.pwd.invalid=Please enter a password with minimum 6 characters and it should contain atleast one letter upper and one letter lower case and one special character(!$#%) and no white spaces
+updatePwd.pwd.invalid=Please enter a password which satisfies the following condition:<p> 1) Minimum 6 characters 2) Atleast one letter upper case 3) Atleast one letter lower case 4) Atleast one numeric 5) Atleast one special character among (!$#%)  6) No spaces
 updatePwd.submit=Update Password
 updatePwd.title=Update Password
 updatePwd.token.invalid=The link used to access the update page was invalid.
@@ -1532,6 +1532,6 @@ text.account.quickorder.inputvalidnumber=Input a valid number
 
 text.account.quickorder.currentShippingPointInCart=Your cart currently has the Shipping Point : 
 account.password.expiry =Your password is expired. Please generate new password.
-account.password.expiry.notification = Your password expires in {0} days.
+account.password.expiry.notification = Your password expires in {0} day[s].
 
-account.password.isQuestionAnsSet = Please set password question and answer
+account.password.isQuestionAnsSet = Please set password question and answer in "Update Personal Details" section
