Changed the expiry email to only 30th day and modified the Password Regex Pattern

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1424,7 +1424,7 @@ updatePwd.checkPwd=Confirm Password
 updatePwd.checkPwd.invalid=Please confirm your password
 updatePwd.description=Please enter a new password.
 updatePwd.pwd=Password
-updatePwd.pwd.invalid=Please enter a password which satisfies the following condition:<p> 1) Minimum 6 characters 2) Atleast one letter upper case 3) Atleast one letter lower case 4) Atleast one numeric 5) Atleast one special character among (!$#%)  6) No spaces
+updatePwd.pwd.invalid=Please enter a password which satisfies the following condition:   1) Minimum 6 characters 2) Atleast one letter upper case 3) Atleast one letter lower case 4) Atleast one numeric 5) Atleast one special character among (!$#%)  6) No spaces
 updatePwd.submit=Update Password
 updatePwd.title=Update Password
 updatePwd.token.invalid=The link used to access the update page was invalid.
