Changed the days to day(s)

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-passwordExpiry_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-passwordExpiry_en.properties
@@ -1,6 +1,6 @@
 emailSubject = Your Password is going to expire.
 salutation=Dear {0}
-passwordExpiry= Your Password will expire in {0} days
+passwordExpiry= Your Password will expire in {0} day(s)
 complimentaryClosing=Thanks
 signature=Energizer Portal Team
 help=Help
