Changed the labels of "Energizer" to "Edgewell"

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1466,7 +1466,7 @@ product.grid.in.stock=In Stock
 text.account.quickorder.pageHeading=Quick Order
 text.account.quickorder.yourOrder=Your Order
 text.account.quickorder.noEntries=Why wait? Start Ordering!!
-text.account.quickorder.productCode=Energizer Product Code
+text.account.quickorder.productCode=Edgewell Product Code
 text.account.quickorder.customerProductCode=Distributor Product Code
 text.account.quickorder.unitOfMeasure=Unit Of Measure
 text.account.quickorder.quantity=Quantity
