Changes have been made as per CMIR active/Inactive requirement. 1)New Class EnergizerCMIRMonitorJob.java have been added , configured in *-spring.xml and EnergizerProductService.java , EnergizerProductDAO.java and essentialdata-energizerCronjobs.impex have been updated. 2)For quick order and Excel order , changes have been made in AccountPageController.java & DefaultEnergizerExcelRowtoModelService.java . 3) for Solr part EnergizerProductCustomerMaterialDescriptionValueProvider.java & EnergizerProductB2BUnitValueProvider.java have been updated. 4)for reorder part changes have been made in reorderButton.tag, AccountPageController.java ,Energizerfacade-bean.xml & productpopulator class. 5).vm files corresponding to password Expiry/Expired. ---------------shweta----------------------------

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1518,3 +1518,5 @@ account.password.expiry =Your Password has been Expired. Please Generate New Pas
 account.password.expiry.notification = Your Password expires in {0} days.
 
 account.password.isQuestionAnsSet = Please set Password Question and Answer
+quickorder.cmirinactive = Product has been removed from  your catalog .
+reorder.cmirinactive=Product {0} removed from  your catalog , so cannot be Reordered.
