change in SingleStepCheckoutController.java in case if we have a product in cart whose corresponding cmir is inactive -----------------------shweta--------------------------

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1538,3 +1538,4 @@ account.password.expiry.notification = Your password expires in {0} day[s].
 account.password.isQuestionAnsSet = Please set password question and answer in "Update Personal Details" section
 quickorder.cmirinactive = Product has been removed from  your catalog .
 reorder.cmirinactive=Product {0} removed from  your catalog , so cannot be Reordered.
+cart.cmirinactive = Some Product[s] in cart are no longer available in your Catalog.
