--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1520,4 +1520,4 @@ account.password.expiry.notification = Your Password expires in {0} days.
 account.password.isQuestionAnsSet = Please set Password Question and Answer
 quickorder.cmirinactive = Product has been removed from  your catalog .
 reorder.cmirinactive=Product {0} removed from  your catalog , so cannot be Reordered.
-cart.cmirinactive = Some Product[s] in cart are no longer available in your Catalog.
+cart.cmirinactive = Product[s] {0} in cart , no longer available in your Catalog.
