Modified for "Generate New Password" for existing customers, who have forgotten and "Reset Password" for new customers. Validation of existing customers have been removed.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -379,12 +379,12 @@ profile.checkEmail=Re-enter email address
 profile.checkEmail.invalid=Please confirm your email address
 profile.checkNewPassword=Confirm New Password
 profile.checkNewPassword.invalid=Please confirm your new password
-profile.passwordQuestion.invalid=Please select a Password Question
-profile.passwordQuestion.incorrect=Please select your correct Password Question
+profile.passwordQuestion.invalid=Please inform the customer care, if password question and answer have not been set.
+profile.passwordQuestion.incorrect= Please inform the customer care, if password question and answer have not been set.
 profile.passwordQuestion=Password Question
 profile.passwordAnswer=Password Answer
-profile.passwordAnswer.invalid=Please enter Password Answer
-profile.passwordAnswer.incorrect=Please enter your correct Password Answer
+profile.passwordAnswer.invalid=Please inform the customer care, if password question and answer have not been set.
+profile.passwordAnswer.incorrect=Please inform the customer care, if password question and answer have not been set.
 profile.email.incorrect=Please enter existing Customer's email address
 profile.checkPwd=Confirm Password
 profile.checkPwd.invalid=Please confirm your password
@@ -1466,7 +1466,7 @@ product.grid.in.stock=In Stock
 text.account.quickorder.pageHeading=Quick Order
 text.account.quickorder.yourOrder=Your Order
 text.account.quickorder.noEntries=Why wait? Start Ordering!!
-text.account.quickorder.productCode=Edgewell Product Code
+text.account.quickorder.productCode=Energizer Product Code
 text.account.quickorder.customerProductCode=Distributor Product Code
 text.account.quickorder.unitOfMeasure=Unit Of Measure
 text.account.quickorder.quantity=Quantity
@@ -1519,7 +1519,7 @@ text.account.orderHistory.approvalStatus= Status
 text.account.orderHistory.orderValue=Order Value
 text.account.orderHistory.shippingDetaiils=Shipping Details
 text.account.orderHistory.containerNumber=Container Number
-text.account.orderHistory.carrierName=Carrier Name
+text.account.orderHistory.carrierName=Vessel/Voyage Number
 text.account.orderHistory.orderNumber = Reference Number
 text.account.orderHistory.orderPlaced= Order Placed On 
 text.account.orderHistory.orderStatus =Order Status
