1->EnergizerCMIRMonitorJob.java,reader.close() is added to release the resource after job get finish. 2->EnergizerGenericEmailContext.java,"env" property is been added into context-map 3->EnergizerEmailGenerationService.java,"enviorment" added in subject of each mail. 4->headernavigationcomponent.jsp,b2bunit name added 5->*subject.vm,enviorment information populated. 6->EnergizerOrphanedProductProcessor.java,enviorment info added in email-subject 7->AbstractEnergizerCSVProcessor.java,enviorment info added in subject for mail-errors method. 8->EnergizerCustomerUsersListJob.java,updated for user-email ids 9->AccountPageController.java,updatePassword method modified. 10->UpdatePasswordForm.java,commented the validation for getCurrentpassword and checknewpassword method. 11->errorSpanField.tag,updated for displaying error in red color 12->base_en.properties,2-3 fields modified for password validation.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -389,7 +389,7 @@ profile.email.incorrect=Please enter existing Customer's email address
 profile.checkPwd=Confirm Password
 profile.checkPwd.invalid=Please confirm your password
 profile.currentPassword=Current Password
-profile.currentPassword.invalid=Please enter your current password
+profile.currentPassword.invalid=Please enter correct existing password
 profile.newPassword.match=Your New Password must not be of previous 5 passwords!!
 profile.email=Email Address
 profile.email.invalid=Please enter a valid email
@@ -1424,7 +1424,7 @@ updatePwd.checkPwd=Confirm Password
 updatePwd.checkPwd.invalid=Please confirm your password
 updatePwd.description=Please enter a new password.
 updatePwd.pwd=Password
-updatePwd.pwd.invalid=Please enter a password which satisfies the following condition:   1) Minimum 6 characters 2) Atleast one letter upper case 3) Atleast one letter lower case 4) Atleast one numeric 5) Atleast one special character among (!$#%)  6) No spaces
+updatePwd.pwd.invalid=Please enter a password which satisfies the following condition: <br> 1) Minimum 6 characters <br> 2) Atleast one letter upper case <br> 3) Atleast one letter lower case <br> 4) Atleast one numeric <br> 5) Atleast one special character among (!$#%) <br> 6) No spaces <br> 7)Your password cannot be reset to any of the previously used 5 passwords <br> 8)Passwords are case sensitive
 updatePwd.submit=Update Password
 updatePwd.title=Update Password
 updatePwd.token.invalid=The link used to access the update page was invalid.
@@ -1443,7 +1443,7 @@ usergroup.uid.invalid.pattern=Please select a valid usergroup identifier, only l
 usergroup.unit.invalid=Please select a Parent Business unit
 usergroup.yes.button=Yes
 validation.checkEmail.equals=Email and Re-enter email address does not match
-validation.checkPwd.equals=Password and password confirmation do not match
+validation.checkPwd.equals=Please verify the passwords entered, the passwords do not match
 
 product.grid.yourPrice=Your Price
 product.grid.availability=Availability
