Following changes have been made: 1)changes related to catalog download 2)changes related to Quick order session 3)Email environment configured in local.properties of dev and qa under envconfig folder

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1485,6 +1485,7 @@ text.account.excelUpload.fileUploadEmpty=You have not uploaded any file
 text.account.excelUpload.fileUploadSize=Maximum File Size is 1 MB
 text.account.excelUpload.fileUploadFormat=Supports only .xls and .xlsx formats
 text.account.excelUpload.FileUpload=Excel Order
+text.account.profile.CatalogDownload=Catalog Download
 text.account.profile.QuickOrderForm=Quick Order
 text.account.excelUpload.orderShipmentPoint=Select Shipping Point
 text.account.excelUpload.productData=Product Data
@@ -1498,6 +1499,8 @@ text.account.excelFileUpload = Excel Order
 text.account.excelFileToUpload = File to upload:
 text.account.click.excelFileUpload =Click here to upload the file!
 text.account.click.upload = Upload
+text.account.catalogDownload=Catalog Download
+text.account.click.download=Catalog Download
 text.account.excelUpload.badDataForQuantity= One or more records have bad data for quantity, so setting to default MOQ
 text.account.excelUpload.fileNotFound= File not Available to process...
 text.account.excelUpload.unableToConvert=Unable to process the uploaded file
@@ -1539,3 +1542,6 @@ account.password.isQuestionAnsSet = Please set password question and answer in "
 quickorder.cmirinactive = Product has been removed from  your catalog .
 reorder.cmirinactive=Product {0} removed from  your catalog , so cannot be Reordered.
 cart.cmirinactive = Product[s] {0} in cart , no longer available in your Catalog.
+
+catalog.download.success=Catalog is successfully downloaded to your Download Folder
+
